--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@velozzity/ts-helpers",
-  "version": "0.1.1",
-  "description": "a set of typescript helper functions used in common velozzity packages",
+  "name": "@velozzity/highway-cli",
+  "version": "0.1.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --config jestconfig.json",
@@ -15,39 +15,22 @@
     "postversion": "git push && git push --tags"
   },
   "files": [
-    "lib/**/*"
+    "dist/**/*"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/velozzity/ts-helpers.git"
+    "url": "git+https://github.com/velozzity/highway-cli.git"
   },
   "keywords": [
-    "helpers",
     "typescript",
     "ts"
   ],
   "author": "velozzity",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/velozzity/ts-helpers/issues"
-  },
-  "homepage": "https://github.com/velozzity/ts-helpers#readme",
+
   "dependencies": {
-    "chalk": "^4.1.0",
-    "crypto": "^1.0.1",
-    "ejs": "^3.1.6",
-    "figlet": "^1.5.0",
-    "fs-extra": "^9.1.0",
-    "path": "^0.12.7",
-    "sanitize-html": "^2.3.2",
-    "user": "0.0.0"
   },
   "devDependencies": {
-    "@types/ejs": "^3.0.6",
-    "@types/figlet": "^1.2.1",
-    "@types/fs-extra": "^9.0.8",
-    "@types/jest": "^26.0.20",
-    "@types/sanitize-html": "^1.27.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.3",
